# bot

./: .gitignore  README.md
minecraft/: .env.prod  README.md  bot.py  pyproject.toml
minecraft/config/: group_message_monitor.json  player_monitor.json
minecraft/plugins/: group_message_monitor.py  minecraft_server_status.py  player_monitor.py
qqbot/codetf/: .env.prod  README.md  pyproject.toml
qqbot/codetf/plugins/: codetf_bot.py  htmlrender_demo.py
qqbot/yuri/: README.md  pyproject.toml  requirements.txt
qqbot/yuri/config/: README_bot_scope.md  README_groupmate_waifu.md  bot_scope_config.py  groupmate_waifu_config.py
qqbot/yuri/data/: bot_scope.json
qqbot/yuri/data/waifu/: waifu_data.json
qqbot/yuri/plugins/: CONCURRENT_OPTIMIZATION.md  README.md  bilinovel.py  bot_scope_manager.py  concurrent_utils.py  htmlrender_demo.py  migrate_signin_db.py  performance_monitor.py  sign_in.py  welcome.py  yuri_bot.py
