[project]
name = "codetf"
version = "0.1.0"
description = "codetf"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_htmlrender", "nonebot_plugin_simple_block", "nonebot_plugin_code"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo", "single_session"]
